--- a/AdminIncludes/in_top_menu_items.html
+++ b/AdminIncludes/in_top_menu_items.html
@@ -1,5 +1,6 @@
 <li>
     <a href="{url path="/admin/module/ProductOfflineWithStock"}">
-        {intl l="Product Offline With Stock" d='productofflinewithstock.ai'}
+        <span class="fa-2x fas fa-toggle-off"></span>
+        <span class="item-text">{intl l="Product Offline With Stock" d='productofflinewithstock.ai'}</span>
     </a>
 </li>
